______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.167:

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.166:

* General XINS-related changes:
  - Added support for type _date.

* XINS/Java Common Library:
  - Added support for _date type by means of class
    org.xins.types.standard.Date.
  - Added class function getContext() to class LogCentral. This class function
    returns the current diagnostic context identifier.
  - Removed the following unused packages:
    . org.xins.specs
    . org.xins.tools.security
    . org.xins.util.ant.sourceforge
  - Fixed EnumItem.equals() now returns true if two EnumItem's are from the
    same class, have the same name and the same value.
    This was erroneous since XINS 0.1.
  - Fixed small error in Javadoc comments for fromStringForOptional(String) in
    class org.xins.types.standard.Properties.

* XINS/Java Server Framework:
  - Renamed parameter 'id' to 'sessionID' in log message 5010.
  - Generated logdoc classes are now package-private.

* Logdoc:
  - Logging the sequential counter identifier with a log message.
  - Parameters cannot be called 'id'.
  - Support making generated classes package-private.
  - Changed the generated HTML for a log entry slightly. One of the changes is
    that it is now displayed whether the log entry supports an exception or
    not.

* Generated build file:
  - Removed the display of the user directory when starting the 'xins' script.

* Generated specification documentation:
  - Only generating 'Test on' row per example, if at least one environment is
    defined.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.165:

* XINS/Java Server Framework:
  - Changed the following log messages so they log the actual exception in a
    DEBUG message directly following the original log message (normally