@@ -86,8 +86,8 @@
 	<translation entry="4034">Lijst van toegangsregels is geladen, met <value-of-param name="ruleCount" /> regel(s).</translation>
 	<translation entry="4035">Fout bij het toepassen van de gespecificeerde toegangsregels. Reden: <value-of-param name="message" format="quoted" />.</translation>
 	<translation entry="4036">Toegangsregel <value-of-param name="index" /> is <value-of-param name="rule" format="quoted" />.</translation>
-	<translation entry="5000">Ongeldig HTTP verzoek ontvangen van <value-of-param name="ip" />. Het HTTP verzoek-type <value-of-param name="method" format="quoted" /> wordt niet ondersteund/toegestaan.</translation>
-	<translation entry="5001">HTTP <value-of-param name="method" /> verzoek ontvangen van <value-of-param name="ip" />.</translation>
+	<translation entry="5000">Ongeldig HTTP verzoek ontvangen van <value-of-param name="ip" />. Het HTTP verzoek-type <value-of-param name="method" format="quoted" /> wordt niet ondersteund/toegestaan. Query string is <value-of-param name="queryString" format="quoted" />.</translation>
+	<translation entry="5001">HTTP <value-of-param name="method" /> verzoek ontvangen van <value-of-param name="ip" />. Query string is <value-of-param name="queryString" format="quoted" />.</translation>
 	<translation entry="5006">Sessie-attribuut <value-of-param name="name" format="quoted" /> krijgt waarde <value-of-param name="valueString" format="quoted" /> (<value-of-param name="valueClass" />).</translation>
 	<translation entry="5007">Sessie-attribuut <value-of-param name="name" format="quoted" /> krijgt waarde (null).</translation>
 	<translation entry="5008">Sessie-attribuut <value-of-param name="name" format="quoted" /> wordt opgevraagd en heeft waarde <value-of-param name="valueString" format="quoted" /> (<value-of-param name="valueClass" />).</translation>
