@@ -1,6 +1,9 @@
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 0.167:
 
+* XINS/Java Server Framework:
+  - Changed log messages 5000 and 5001 to log the query string.
+
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 0.166:
 
